src/objects/All_Opportunities__c.object
<CustomObject>
    <description>Demo object only. This can be deleted after the design phase.

This object is used to show a sample view of All Opportunities.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>All Opportunities</relationshipLabel>
        <relationshipName>All_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Access__c</fullName>
        <formula>IMAGE(&quot;/resource/1406051507000/Request_Access_Button&quot;, &quot;Request Access&quot;, 18.68, 110)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Area__c</fullName>
        <label>Solution Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Focus__c</fullName>
        <description>Field for demo prototype only. Can be deleted at the end of design</description>
        <label>Solution Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Owner__c</fullName>
        <label>Technical Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>All Opportunities</label>
    <nameField>
        <label>Opportunity ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>